# glowfetch

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CONFIG.md  THEMES.md  glowfetch.toml
packaging/scoop/: glowfetch.json
packaging/winget/manifests/n/NuuMaan/Glowfetch/0.1.0/: NuuMaan.Glowfetch.installer.yaml  NuuMaan.Glowfetch.locale.en-US.yaml  NuuMaan.Glowfetch.yaml
src/: main.rs
